AC_INIT([rfsniffer], [0.1], [avp@avp.name])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL
LT_INIT
AM_PROG_AR
AC_CONFIG_HEADERS([config.h])

AC_DEFINE([RFSNIFFER],[1],[Wiren board rfm sniffer])

AC_CONFIG_FILES([
 Makefile
 libutils/Makefile
 librf/Makefile
 tests/Makefile
 rfsniffer/Makefile
])
AC_OUTPUT
