lib_LTLIBRARIES = librf.la
librf_la_SOURCES = RFParser.cpp RFProtocol.cpp RFProtocolLivolo.cpp RFProtocolRST.cpp RFProtocolRaex.cpp RFProtocolX10.cpp spidev_lib++.cpp \
		RFProtocolOregon.cpp RFAnalyzer.cpp \
		RFParser.h RFProtocol.h RFProtocolLivolo.h RFProtocolRST.h RFProtocolRaex.h RFProtocolX10.h spidev_lib++.h RFM69OOK.cpp RFM69OOK.h WBDevice.cpp
AM_CFLAGS = -pthread
AM_CXXFLAGS = -pthread
librf_la_LDFLAGS = -all-static
