lib_LTLIBRARIES = libutils.la
libutils_la_SOURCES = Exception.cpp Serializable.cpp haconfig.h locks.cpp logging.cpp stdafx.h strutils.h Exception.h Serializable.h \
		libutils.h locks.h logging.h strutils.cpp Buffer.cpp Buffer.h

AM_CFLAGS = -pthread
AM_CXXFLAGS = -pthread

libutils_la_LDFLAGS = -all-static
